Polish README for portfolio presentation